@@ -19,29 +19,18 @@
  * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
  * or visit www.oracle.com if you need additional information or have any
  * questions.
- *
  */
 
-#include "precompiled.hpp"
+// key: compiler.err.guard.has.constant.expression.false
+// key: compiler.misc.feature.pattern.switch
+// key: compiler.warn.preview.feature.use.plural
+// options: --enable-preview -source ${jdk.version} -Xlint:preview
 
-#ifdef COMPILER2
-
-#include "opto/parse.hpp"
-#include "interpreter/bytecodes.hpp"
-
-bool Parse::do_one_bytecode_targeted() {
-  switch (bc()) {
-    case Bytecodes::_idiv: // fallthrough
-    case Bytecodes::_irem: // fallthrough
-#ifdef _LP64
-    case Bytecodes::_ldiv: // fallthrough
-    case Bytecodes::_lrem:
-#endif
-      do_divmod_fixup();
-      return true;
-    default:
-      return false;
-  }
+class GuardHasConstantFalse {
+    private void doSwitch(Object o) {
+        switch (o) {
+            case String s when false -> {}
+            default -> {}
+        }
+    }
 }
-
-#endif // COMPILER2
